2003-01-28  Al Riddoch  <alriddoch@zepler.org>

	* src/Segment.cpp, src/Segment.h: First stab at qRMD algorithm.

2003-01-28  Al Riddoch  <alriddoch@zepler.org>

	* src/Terrain.cpp: Fix segment dependencies.

2003-01-28  Al Riddoch  <alriddoch@zepler.org>

	* src/Segment.cpp, src/Segment.h, src/Terrain.cpp: Implement
	  midpoint based terrain algorithm, currently without any
	  displacement.

2003-01-20  Al Riddoch  <alriddoch@zepler.org>

	* src/Segment.cpp, src/Segment.h, src/Terrain.cpp, src/Terrain.h:
	  Switch to using floats instead of doubles internally for performance.

2003-01-19  Al Riddoch  <alriddoch@zepler.org>

	* src/Segment.h, src/Segment.cpp: Add class for terrain segment, which
	  currently contains an interpolated sloped area.

	* src/Terrain.h, src/Terrain.cpp: Add functionality required to manage
	  segments in the terrain.