@@ -10,6 +10,9 @@
 
 namespace Mercator {
 
+static float fallOff = 0.15;
+static float roughness = 1.5;
+
 Segment::Segment(int res) : m_res(res), m_points(new float[res * res])
 {
 }
@@ -47,7 +50,7 @@ void Segment::populate(const float * base)
     tmp[m_res * 2][m_res * 3] = base[2 * 4 + 3];
     tmp[m_res * 3][m_res * 3] = base[3 * 4 + 3];
 
-    for(int l = m_res, m = 1; l > 1; l >>= 1, m <<= 1) {
+    for(int l = m_res, m = 1, n = 1; l > 1; l >>= 1, m <<= 1, ++n) {
         std::cout << "Pass " << m << " with level " << l << std::endl << std::flush;
         for(int i = 0; i < (m * 3); i++) {
             for(int j = 0; j < (m * 3); j++) {
@@ -59,7 +62,8 @@ void Segment::populate(const float * base)
                 tmp[j * l + l / 2][i * l + l / 2] = qRMD(tmp[j * l][i * l],
                                                          tmp[j * l][(i + 1) * l],
                                                          tmp[(j + 1) * l][i * l],
-                                                         tmp[(j + 1) * l][(i + 1) * l]);
+                                                         tmp[(j + 1) * l][(i + 1) * l],
+                                                         n);
             }
         }
 
@@ -73,7 +77,8 @@ void Segment::populate(const float * base)
                 tmp[j * l][i * l + l / 2] = qRMD(tmp[j * l][i * l],
                                                  tmp[j * l][(i + 1) * l],
                                                  tmp[j * l + l / 2][i * l + l / 2],
-                                                 tmp[j * l - l / 2][i * l + l / 2]);
+                                                 tmp[j * l - l / 2][i * l + l / 2],
+                                                 n);
             }
             if (i == 0) { continue; }
             for(int j = 0; j < (m * 3); ++j) {
@@ -125,16 +130,18 @@ const std::string Segment::height2string(float h) const
 }
 #endif
 
-float Segment::qRMD(float nn, float fn, float nf, float ff) const
+float Segment::qRMD(float nn, float fn, float nf, float ff, int depth) const
 {
     float tot = nn + fn + nf + ff;
     srand((unsigned int)fabsf(tot));
 
     float heightDifference = std::max(std::max(nn, fn), std::max(nf, ff)) -
                              std::min(std::min(nn, fn), std::min(nf, ff));
-    float displacement = ((float)rand()) / RAND_MAX;
+    float displacement = ((float)rand()) / RAND_MAX - .5f;
 
-    return tot / 4 + displacement * heightDifference;
+    // std::cout << "D: " << tot / 4 << ":" << displacement << ":"
+              // << heightDifference << std::endl << std::flush;
+    return tot / 4.f + (displacement * heightDifference * roughness) / (powf(depth,fallOff) + 1.f);
 }
 
 } // namespace Mercator
